--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,11 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<app-dashboard></app-dashboard>
+
+
+
+
 <style>
   h1{
     display: flex;
