--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<div class="container-fluid">
+    <div class="col-12 d-flex jusify-content-center">
+    <div class="col-4 todo-block">
+        <h3>Get Things Done</h3>
+    </div>
+    </div>
+</div>
