--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,7 +1,23 @@
 <div class="container-fluid">
-    <div class="col-12 d-flex jusify-content-center">
-    <div class="col-4 todo-block">
-        <h3>Get Things Done</h3>
+    <div class="container bg-light">
+<h3>Get Things Done Box</h3>
+    <div class="row mt-4">
+        <div class="col"></div>
+        <div class="col-md-6 bg-white">
+<!-- // change this color after -->
+            <div class="card bg-warning">
+                <h4 class="text-red">What Needs To Get Done Today</h4>
+            </div>
+
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Add Activity">
+                <button class="btn btn-outline-success" type="button" >Button</button>
+              </div>
+
+        </div>
+        <div class="col"></div>
+
+        
     </div>
     </div>
 </div>
