added second label

--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,18 +1,38 @@
 <div class="container-fluid">
-    <div class="container bg-light">
+    <div class="container bg-dark-subtle">
 <h3>Get Things Done Box</h3>
-    <div class="row mt-4">
+    <div class="row mt-4" style="height: 500px">
         <div class="col"></div>
-        <div class="col-md-6 bg-white">
+        <div class="col-md-6 bg-white shadow">
 <!-- // change this color after -->
-            <div class="card bg-warning">
-                <h4 class="text-red">What Needs To Get Done Today</h4>
+            <div class="card bg-warning mt-4">
+                <h4 class="text-white ps-3 pt-3 pb-2">What Needs To Get Done</h4>
             </div>
 
+            <div class="shadow">
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Add Activity">
                 <button class="btn btn-outline-success" type="button" >Button</button>
               </div>
+            </div>
+<!-- change this color -->
+            <h5 class="text-primary mt-4"> Activities : </h5>
+
+            <div style="overflow-y: auto; height: 350px;">
+                <div class="m-3">
+                    <div class="p-2 shadow">
+                            <div class="input-group row ps-3"></div>
+                            <div class="card col-md-10">Make sure to complete all activities</div>
+                            <!-- add animation to make it look fun -->
+                            <button>edit</button>
+                            <button>delete</button>
+
+                    </div>
+
+                </div>
+            
+            </div>
+
 
         </div>
         <div class="col"></div>
