added edit delete and get request

--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -20,12 +20,12 @@
 
             <div style="overflow-y: auto; height: 350px;">
                 <div class="m-3">
-                    <div class="p-2 shadow">
+                    <div class="p-2 shadow border">
                             <div class="input-group row ps-3"></div>
-                            <div class="card col-md-10">Make sure to complete all activities</div>
+                            <div class="card col-md-10 border-0">Make sure to complete all activities</div>
                             <!-- add animation to make it look fun -->
-                            <button>edit</button>
-                            <button>delete</button>
+                            <button class="btn btn-outline-primary col me-2">edit</button>
+                            <button class="btn btn-outline-danger col">delete</button>
 
                     </div>
 
